@@ -1,3 +1,6 @@
+Aug 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- Apply brightness correction to mapshots
+
 Aug 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - Fix usage of AC_ARG_ENABLE (#1010440). Thanks Mike Frysinger for reporting.
 
